# bl602-rust-poc

./: Cargo.toml  Embed.toml  README.md  openocd.cfg
.cargo/: config
src/: main.rs
