[package]
name = "demo"
version = "0.1.0"
authors = ["Danilo Bargen <mail@dbrgn.ch>"]
edition = "2018"

[profile.dev]
codegen-units = 1
opt-level = 2

[profile.release]
lto = true
debug = true
codegen-units = 1

[dependencies]
bl602-hal = { git = "https://github.com/sipeed/bl602-hal", branch = "main" }
panic-halt = "0.2"
riscv = "0.6"
riscv-rt = "0.8"

[patch.'https://github.com/sipeed/bl602-hal']
bl602-pac = { git = "https://github.com/sipeed/bl602-pac", branch = "main" }
